--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,13 @@
 RewriteEngine On
-
-RewriteBase /~3karminski/projekt2
-
+RewriteBase /
+#
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^.*$ - [NC,L]
+#
 
-RewriteRule ^(.*)$ index.php?target=$1 [QSA,NC,L]
+RewriteRule ^$ /Main [L,R=301]
+RewriteRule ^(.*)$ index.php?target=$1 [NC,L]
+
+#zendframework
